<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Petitur</string>
    <string name="title_activity_map">Map</string>
    <string name="find_a_pet">Find a pet</string>
    <string name="favorites">Favorites</string>
    <string name="add_a_new_pet">Add a new pet</string>
    <string name="location_rationale">Location is required to improve the search results by checking the distance relative to you. If you don\'t allow this, search results may be less useful.</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="preferences">Preferences</string>
    <string name="my_profile">My profile</string>
    <string name="preference_key_user_longitude" translatable="false">user_longitude</string>
    <string name="preference_key_user_latitude" translatable="false">user_latitude</string>
    <string name="image_too_large">The image you chose is too large, try a smaller image.</string>
    <string name="cannot_open_ftp">Sorry, we cannot open ftp links in this app</string>
    <string name="cannot_open_smtp">Sorry, we cannot open smtp links in this app</string>
    <string name="app_preference_sign_in_state" translatable="false">app_preference_sign_in_state</string>
    <string name="app_preferences" translatable="false">app_preferences</string>
    <string name="preference_key_first_time_using_app" translatable="false">first_time_using_app</string>
    <string name="saved_profile_images_rv_position" translatable="false">saved_profile_images_rv_position</string>
    <string name="reached_max_images">You have reached the maximum number of images, please select an image to replace.</string>
    <string name="no_permissions_terminating">The app cannot work properly without these permissions. Terminating the app.</string>
    <string name="password_doublepoints">Password:</string>
    <string name="email_doublepoints">Email:</string>
    <string name="no_email_available">No email available</string>
    <string name="no_name_available">No name available</string>
    <string name="hidden_password">********</string>
    <string name="name_doublepoints">Name:</string>
    <string name="who_i_am">Who I am</string>
    <string name="edit">edit</string>
    <string name="search_only_in_my_country">Search only in my country (recommended)</string>
    <string name="please_sign_in_to_view_the_menu">Please sign in to view the menu.</string>
    <string name="saved_firebase_email" translatable="false">saved_firebase_email</string>
    <string name="saved_firebase_name" translatable="false">saved_firebase_name</string>
    <string name="saved_firebase_id" translatable="false">saved_firebase_id</string>
    <string name="saved_user" translatable="false">saved_user</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="please_enter_your_password">Please enter your password.</string>
    <string name="current_password">Please enter your current password</string>
    <string name="new_password">New Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_updated_password">Successfully updated password.</string>
    <string name="failed_to_update_password">Failed to update password.</string>
    <string name="error_accessing_user_info">Error accessing user information.</string>
    <string name="successfully_updated_email">Successfully updated email.</string>
    <string name="failed_to_update_email">Failed to update password.</string>
    <string name="successfully_updated_name">Successfully updated name.</string>
    <string name="failed_to_update_name">Failed to update name.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="device_version_too_low">Your device\'s Android version is too low.</string>
    <string name="please_sign_in_to_view_your_preferences">Please sign in to view your preferences.</string>
    <string name="selected_pet_id" translatable="false">selected_pet_id</string>
    <string name="organization">Organization</string>
    <string name="pet_s_english_name_required">Pet\'s English name (*required if no local name)</string>
    <string name="country_required">Country (*required)</string>
    <string name="state_if_relevant">State (if relevant)</string>
    <string name="city_required">City (*required)</string>
    <string name="street_required">Street (*required)</string>
    <string name="street_number_required">Street Number (*required)</string>
    <string name="pet_race">Race</string>
    <string name="pet_gender">Gender</string>
    <string name="pet_size">Size</string>
    <string name="pet_s_history">Pet\'s history</string>
    <string name="add_a_video_link_http">Add a video link (http://…)</string>
    <string name="please_paste_a_full_http_link_here">Please paste a full http link here</string>
    <string name="add_video_link">Add a video link</string>
    <string name="upload_pet_pics">Upload pet pics</string>
    <string name="choose_pet_s_main_pic">Choose pet\'s main pic</string>
    <string name="pet_main_image">Pet main image</string>
    <string name="saved_scroll_position" translatable="false">scroll_position</string>
    <string name="image">Image</string>
    <string name="must_save_profile_first">You must save the profile with the required fields before you can upload pictures.</string>
    <string name="error_processing_request">Error while trying to process request, please try again</string>
    <string name="profile_update_image_name" translatable="false">profile_update_image_name</string>
    <string name="profile_update_pet_images_rv_position" translatable="false">profile_update_pet_images_rv_position</string>
    <string name="critical_parameters_set" translatable="false">critical_parameters_set</string>
    <string name="saved_profile" translatable="false">saved_profile</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="pet_not_saved">Pet not saved! Please fill in valid values for the fields marked with *.</string>
    <string name="add_marker_to_map">Add marker to map</string>
    <string name="family_profile">Family Profile</string>
    <string name="foundation_profile">Foundation Profile</string>
    <string name="are_you_sure_delete_marker">Are you sure you want to delete this marker? This cannot be undone.</string>
    <string name="remove">Remove</string>
    <string name="map">Map</string>
    <string name="map_activity_got_map_markers" translatable="false">map_activity_got_map_markers</string>
    <string name="map_activity_map_markers" translatable="false">map_activity_map_markers</string>
    <string name="requested_specific_profile" translatable="false">requested_specific_profile</string>
    <string name="click_on_pin_to_show_profile">Click on a pin to show the item\'s name, then click on it to see its profile.</string>
    <string name="search_results_families_at_distance_list" translatable="false">search_results_families_at_distance_list</string>
    <string name="search_results_foundations_at_distance_list" translatable="false">search_results_foundations_at_distance_list</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="please_sign_in_to_see_map_markers">Please sign-in to see your map markers.</string>
    <string name="marker_title">Marker Title</string>
    <string name="marker_description">Description</string>
    <string name="creating_new_map_marker">Creating a new map marker</string>
    <string name="street_incl_number">Street (including number)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="no_pet_found_press_done_to_create">No pet found for your organization, press DONE to create a new pet.</string>
    <string name="foundation_name_required">Organization Name (*required)</string>
    <string name="website">Website</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_phone">Contact phone</string>
    <string name="street_number">Street Number</string>
    <string name="upload_foundation_pics">Upload Foundation Pics</string>
    <string name="foundation_main_pic">Foundation Main Pic</string>
    <string name="gender">Gender</string>
    <string name="dialog_filter_button_male" translatable="false">@string/male</string>
    <string name="dialog_filter_button_female" translatable="false">@string/female</string>
    <string name="dialog_filter_button_any" translatable="false">@string/any</string>
    <string name="age">Age</string>
    <string name="dialog_filter_button_puppy" translatable="false">@string/toddler</string>
    <string name="dialog_filter_button_young" translatable="false">@string/young</string>
    <string name="dialog_filter_button_adult" translatable="false">@string/adult</string>
    <string name="dialog_filter_button_senior" translatable="false">@string/senior</string>
    <string name="size">Size</string>
    <string name="dialog_filter_button_small">S</string>
    <string name="dialog_filter_button_medium">M</string>
    <string name="dialog_filter_button_large">L</string>
    <string name="dialog_filter_button_extra_large">XL</string>
    <string name="breed">Breed</string>
    <string name="coat_length">Coat length</string>
    <string name="special_needs">Special needs</string>
    <string name="good_with_cats">Good with cats</string>
    <string name="house_trained">House trained</string>
    <string name="good_with_dogs">Good with dogs</string>
    <string name="castrated">Castrated</string>
    <string name="good_with_kids">Good with kids</string>
    <string name="filter_option_any" translatable="false">@string/any</string>
    <string name="show_dropdown">Show dropdown</string>
    <string name="type">Type</string>
    <string name="distance_from_me">Distance from me:</string>
    <string name="zero">0</string>
    <string name="unit_km">km</string>
    <string name="dialog_filter_my_pets" translatable="false">@string/my_pets</string>
    <string name="dialog_filter_all_pets">All Pets</string>
    <string name="sort_by">Sort By</string>
    <string name="default_date" translatable="false">01-01-2018</string>
    <string name="description_of_the_vet_event">Description of the Vet Event</string>
    <string name="today">Today</string>
    <string name="please_choose_the_information_you_wish_to_share">Please choose the information you wish to share:</string>
    <string name="my_phone_number">My phone number</string>
    <string name="my_full_name">My full name</string>
    <string name="pet_s_organization_details">The selected pet\'s organization details</string>
    <string name="additional_details">Additional details you wish to share</string>
    <string name="my_email">My email</string>
    <string name="my_family_profile_s_basic_details">My family profile\'s basic details (pseudonym, unique ID)</string>
    <string name="pet_s_basic_details_name_id">Pet\'s basic details (name, ID)</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="petitur_logo" translatable="false">Petitur Logo</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_account_continue">Continue</string>
    <string name="password_at_least_6_characters">Password (at least 6 characters)</string>
    <string name="sure_want_to_delete_account_enter_credentials">Are you sure you want to delete your account? If so, please enter your credentials to confirm.</string>
</resources>