<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_the_information_you_wish_to_share"
        android:textSize="18sp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/pet_s_basic_details_name_id"/>

    <CheckBox
        android:id="@+id/dialog_choose_share_options_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/my_full_name"/>

    <CheckBox
        android:id="@+id/dialog_choose_share_options_my_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/my_phone_number"/>

    <CheckBox
        android:id="@+id/dialog_choose_share_options_my_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/my_email"/>

    <CheckBox
        android:id="@+id/dialog_choose_share_options_my_family_profile_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/my_family_profile_s_basic_details"/>

    <CheckBox
        android:id="@+id/dialog_choose_share_options_pet_foundation_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/pet_s_organization_details"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/additional_details">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_choose_share_options_free_text"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>