<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginEnd="56dp"
    android:orientation="vertical"
    tools:context=".ui.common.CreateAccountActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_image_black_24dp"
        android:contentDescription="@string/petitur_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_an_account"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_account_value_username"
            style="@style/TextInputEditTextParametersStyle"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_account_value_email"
            style="@style/TextInputEditTextParametersStyle"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password_at_least_6_characters">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_account_value_password"
            style="@style/TextInputEditTextParametersStyle"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/confirm_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_account_value_confirm_password"
            style="@style/TextInputEditTextParametersStyle"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_account_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/create_account_continue"/>
</LinearLayout>