<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <TextView
        android:id="@+id/dialog_delete_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/list_item_texts_padding"
        android:text="@string/sure_want_to_delete_account_enter_credentials"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_delete_account_email"
            style="@style/TextInputMultiLineEditTextParametersStyle"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_delete_account_password"
            style="@style/TextInputMultiLineEditTextParametersStyle"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>